# Maki

./: .gitignore  Cargo.toml  LICENSE  README.md
maki/: Cargo.toml
maki/src/: hasher.rs  lib.rs  maki_objects.rs  maki_types.rs  merkle_tree.rs  snark_verifier.rs
plonk_prover/: Cargo.toml
plonk_prover/src/: circuit.rs  circuits.rs  lib.rs  proof_prover.rs  proof_verifier.rs  prover_types.rs
shared/: Cargo.toml
shared/src/: functions_utils.rs  lib.rs  types.rs
src/maki/: hasher.rs  lib.rs  maki_objects.rs  maki_types.rs  merkle_tree.rs  snark_verifier.rs
src/plonk_prover/: circuit.rs
