[package]
name = "maki-shared"
version = "0.0.1-alpha"
authors = ["Cyril Carlier"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dusk-bls12_381 = { version = "0.11.0", default-features = false }
dusk-plonk = { version = "0.12.0", default-features = false, features = [
    "alloc",
] }
dusk-bytes = "0.1"
rand_core = "0.6.4"

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
std = ["dusk-bls12_381/default"]
